[package]
name = "rsfn-file"
version = "0.0.0"
description = "Utilitário para arquivos que trafegam na RSFN (Rede do Sistema Financeiro Nacional)"
authors = ["Eduardo Klosowski <eduardo_klosowski@yahoo.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/eduardoklosowski/rsfn-file"
categories = []
keywords = []
edition = "2024"
rust-version = "1.89"
publish = false

[dependencies]
aes-gcm = "0.10"
clap = { version = "4.5", features = ["cargo"] }
clap_complete = "4.5"
libflate = "2.2"
rsa = { version = "0.9", features = ["sha2"] }
x509-certificate = "0.25"

[dev-dependencies]
rand = "0.9"
